# algs

./: .travis.yml  CMakeLists.txt  all_test.go  insertion_sort.go  main.cpp  tools.hpp
adt/: test_tpool.cpp  test_tpool.hpp  tpool.cpp  tpool.hpp
numeric/: randomize.cpp  randomize.hpp  test_randomize.cpp  test_randomize.hpp
